[package]
name = "tuibeyond"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
# serde_derive = { version = "1.0.210" }
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = { version = "0.26.4" }
rand = { version = "0.8.4" }
